# cartograpy

./: .gitignore  README.md  html_render.cmd  index.html  pyproject.toml  readme.cmd  requirements.txt  setup.py
cartograpy/: __init__.py  boundaries.py  colors.py  converter.py  countries_iso3.py  data.py  geocoder.py  iso3_codes.py  iso_code.py  maper.py  maper2.py  mapper.py  maps.py  processing.py
cartograpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
country-flag-icons/: licenses.csv
dist_old/: cartograpy-1.0.2-py3-none-any.whl  cartograpy-1.0.3-py3-none-any.whl  cartograpy-1.0.4-py3-none-any.whl  cartograpy-1.0.5-py3-none-any.whl
test/data/: Département de Bouna.geojson
test_files/libs/bootstrap/: bootstrap-a4ea95c074733d45d445fc61c816fcb2.min.css
